feat: Configure persistent data volume for Docker
Updates the `docker-compose.yml` file to correctly map the persistent data volume for the application. This ensures that data is stored on the specified NAS path (`/volume1/docker/contamiki/data`) and survives container restarts or re-creations.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
       - "4000:4000"
     volumes:
       # Persistencia de datos (Ajusta la ruta de la izquierda según tu NAS)
-      - ./data:/app/data
+      - /volume1/docker/contamiki/data:/app/data
     environment:
       # Tu API Key de Google Gemini
       - API_KEY=AIzaSyByt2qp5UYhL-bhf1me82AM81PEJ7MJyYE
