--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,23 +1,24 @@
-version: '3'
+version: '3.8'
+
 services:
   contamiki:
-    container_name: contamiki
     build: .
+    container_name: contamiki
     restart: unless-stopped
     ports:
       - "4000:4000"
-    volumes:
-      # 1. Mapear el directorio actual al contenedor para reflejar cambios de código (git pull)
-      #- ./:/app
-      # 2. Usar un volumen anónimo para node_modules para evitar conflictos con el host
-      #- ./app/node_modules
-      # 3. Persistencia de datos (Ajusta la ruta de la izquierda según tu NAS)
-      - /volume1/docker/contamiki/data:/app/data
-    # Comando: Reconstruye el frontend (bundle.js) y luego arranca el servidor cada vez que se reinicia
-    #command: sh -c "npm run build && npm start"
     environment:
+      - NODE_ENV=production
       - PORT=4000
-      # Tu API Key de Google Gemini
-      - API_KEY=AIzaSyByt2qp5UYhL-bhf1me82AM81PEJ7MJyYE
-      # Clave secreta para las sesiones (Cámbiala por seguridad)
-      - JWT_SECRET=nasMAJU1505
+      # Se recomienda crear un archivo .env o sustituir aquí tus claves
+      - API_KEY=${API_KEY:-AIzaSyByt2qp5UYhL-bhf1me82AM81PEJ7MJyYE}
+      - JWT_SECRET=${JWT_SECRET:-nasMAJU1505}
+    volumes:
+      # Persistencia de datos local
+      - /volume1/docker/contamiki/data:/app/data
+    networks:
+      - contamiki_network
+
+networks:
+  contamiki_network:
+    driver: bridge
