feat: Use Docker volumes for data persistence
Replaces local volume mapping in docker-compose.yml with a named volume for better Docker management of application data. This ensures data is persisted even if the container or host storage location changes. Also removes outdated Dockerfile which was replaced by a multi-stage build or similar CI/CD process.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,14 +10,16 @@ services:
     environment:
       - NODE_ENV=production
       - PORT=4000
-      # Puedes definir estas variables en un archivo .env en la misma carpeta
       - API_KEY=${API_KEY}
       - JWT_SECRET=${JWT_SECRET:-clave_secreta_por_defecto_123}
     volumes:
-      # Persistencia de datos (usuarios y transacciones) en la carpeta local ./data
-      - ./data:/app/data
+      # Usamos un volumen nombrado para que Docker lo gestione automáticamente
+      - contamiki_data:/app/data
     networks:
       - contamiki_network
+
+volumes:
+  contamiki_data:
 
 networks:
   contamiki_network:
