--- a/package.json
+++ b/package.json
@@ -11,9 +11,8 @@
   "dependencies": {
     "express": "^4.18.2",
     "bcryptjs": "^2.4.3",
-    "jsonwebtoken": "^9.0.2"
-  },
-  "devDependencies": {
+    "jsonwebtoken": "^9.0.2",
     "esbuild": "^0.20.0"
-  }
+  },
+  "devDependencies": {}
 }
