--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,4 @@
-version: '3.8'
-
+version: '3'
 services:
   contamiki:
     container_name: contamiki
@@ -7,16 +6,18 @@ services:
     restart: unless-stopped
     ports:
       - "4000:4000"
-    environment:
-      - NODE_ENV=production
-      - PORT=4000
-      # Pasa tu API KEY de Google aquí
-      - API_KEY=${API_KEY}
-      # Secreto para tokens (opcional, tiene valor por defecto)
-      - JWT_SECRET=${JWT_SECRET:-clave_secreta_por_defecto_123}
     volumes:
-      # Volumen persistente para no perder los datos al reiniciar
-      - contamiki_data:/app/data
-
-volumes:
-  contamiki_data:
+      # 1. Mapear el directorio actual al contenedor para reflejar cambios de código (git pull)
+      #- ./:/app
+      # 2. Usar un volumen anónimo para node_modules para evitar conflictos con el host
+      #- ./app/node_modules
+      # 3. Persistencia de datos (Ajusta la ruta de la izquierda según tu NAS)
+      - /volume1/docker/contamiki/data:/app/data
+    # Comando: Reconstruye el frontend (bundle.js) y luego arranca el servidor cada vez que se reinicia
+    #command: sh -c "npm run build && npm start"
+    environment:
+      - PORT=4000
+      # Tu API Key de Google Gemini
+      - API_KEY=AIzaSyByt2qp5UYhL-bhf1me82AM81PEJ7MJyYE
+      # Clave secreta para las sesiones (Cámbiala por seguridad)
+      - JWT_SECRET=nasMAJU1505
