--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,9 +10,9 @@ services:
       - NODE_ENV=production
       - PORT=4000
       # Pasa tu API KEY de Google aquí
-      - API_KEY=AIzaSyByt2qp5UYhL-bhf1me82AM81PEJ7MJyYE
+#      - API_KEY=AIzaSyByt2qp5UYhL-bhf1me82AM81PEJ7MJyYE
       # Secreto para tokens (opcional, tiene valor por defecto)
-      - JWT_SECRET=nasMAJU1505
+#      - JWT_SECRET=nasMAJU1505
     volumes:
       # Volumen persistente para no perder los datos al reiniciar
       - /volume1/docker/contamiki/data:/app/data
