refactor: Remove ledger-specific data and simplify types
The concept of "ledgers" has been removed from the application. This commit removes all ledger-related fields from interfaces and data service logic. The favicon has also been updated.

Changes include:
- Removed `ledgerId`, `ledgers`, `activeLedgerId` from `AppState` and related interfaces.
- Simplified default data in `dataService.ts` to no longer depend on ledgers.
- Updated the favicon URL in `index.html`.
- Removed unused imports and state management related to ledgers in `Layout.tsx`.
- Removed `ledgerId` from `Transaction` and `RecurrentMovement` types.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,19 +2,25 @@ version: '3.8'
 
 services:
   contamiki:
-    container_name: contamiki
     build: .
+    container_name: contamiki
     restart: unless-stopped
     ports:
       - "4000:4000"
     environment:
       - NODE_ENV=production
       - PORT=4000
-      # Recuerda definir API_KEY y JWT_SECRET en la sección Environment variables de Portainer
       - API_KEY=${API_KEY}
-      - JWT_SECRET=${JWT_SECRET}
+      - JWT_SECRET=${JWT_SECRET:-clave_secreta_por_defecto_123}
     volumes:
+      # Usamos un volumen nombrado para que Docker lo gestione automáticamente
       - contamiki_data:/app/data
+    networks:
+      - contamiki_network
 
 volumes:
   contamiki_data:
+
+networks:
+  contamiki_network:
+    driver: bridge
