--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
+
 {
   "name": "contamiki",
-  "version": "1.3.0",
+  "version": "1.4.0",
   "description": "ContaMiki Self-Hosted with Multi-User",
   "main": "server.js",
   "type": "module",
@@ -12,7 +13,8 @@
     "express": "^4.18.2",
     "bcryptjs": "^2.4.3",
     "jsonwebtoken": "^9.0.2",
-    "esbuild": "^0.20.0"
+    "esbuild": "^0.20.0",
+    "nodemailer": "^6.9.13"
   },
   "devDependencies": {}
 }
