Update SMTP_PASS to remove spaces

--- a/.env
+++ b/.env
@@ -18,4 +18,4 @@ SMTP_HOST=smtp.gmail.com
 SMTP_PORT=587
 SMTP_SECURE=false
 SMTP_USER=tu_contamikimail@gmail.com
-SMTP_PASS=iaqm vkyr ofnh fdgw 
+SMTP_PASS=iaqmvkyrofnhfdgw 
