--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,4 +25,4 @@ services:
       - SMTP_PORT=587
       - SMTP_SECURE=false
       - SMTP_USER=tu_contamikimail@gmail.com
-      - SMTP_PASS=ciaqm vkyr ofnh fdgw
+      - SMTP_PASS=sbwj fvjv ekgc vbth 
