feat: Configure production deployment settings
Update docker-compose.yml and .env to include production-ready configurations. This includes setting NODE_ENV to production, defining APP_URL, and providing SMTP environment variables for email functionality.

The Dockerfile was simplified by removing build steps that are now handled within the docker-compose.yml's entrypoint or build context.

--- a/.env
+++ b/.env
@@ -18,4 +18,5 @@ SMTP_HOST=smtp.gmail.com
 SMTP_PORT=587
 SMTP_SECURE=false
 SMTP_USER=tu_contamikimail@gmail.com
-SMTP_PASS=iaqmvkyrofnhfdgw 
+# La contraseña de aplicación debe ir sin espacios (16 caracteres)
+SMTP_PASS=iaqmvkyrofnhfdgw
