Change SMTP_USER email address
Updated SMTP_USER to a new email address.

--- a/.env
+++ b/.env
@@ -17,6 +17,6 @@ APP_URL=http://conta.mafede.i234.me
 SMTP_HOST=smtp.gmail.com
 SMTP_PORT=587
 SMTP_SECURE=false
-SMTP_USER=tu_contamikimail@gmail.com
+SMTP_USER=contamikimail@gmail.com
 # La contraseña de aplicación debe ir sin espacios (16 caracteres)
 SMTP_PASS=sbwjfvjvekgcvbth
