--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,5 +24,5 @@ services:
       - SMTP_HOST=smtp.gmail.com
       - SMTP_PORT=587
       - SMTP_SECURE=false
-      - SMTP_USER=tu_contamikimail@gmail.com
+      - SMTP_USER=contamikimail@gmail.com
       - SMTP_PASS=sbwjfvjvekgcvbth
