--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 
 {
   "name": "contamiki",
-  "version": "1.4.0",
+  "version": "1.5.0",
   "description": "ContaMiki Self-Hosted with Multi-User",
   "main": "server.js",
   "type": "module",
@@ -14,7 +14,9 @@
     "bcryptjs": "^2.4.3",
     "jsonwebtoken": "^9.0.2",
     "esbuild": "^0.20.0",
-    "nodemailer": "^6.9.13"
+    "nodemailer": "^6.9.13",
+    "speakeasy": "^2.0.0",
+    "qrcode": "^1.5.3"
   },
   "devDependencies": {}
 }
