--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,25 +7,8 @@ services:
     ports:
       - "4000:4000"
     volumes:
-      # 1. Mapear el directorio actual al contenedor para reflejar cambios de código (git pull)
-      #- ./:/app
-      # 2. Usar un volumen anónimo para node_modules para evitar conflictos con el host
-      #- ./app/node_modules
-      # 3. Persistencia de datos (Ajusta la ruta de la izquierda según tu NAS)
+# Ajusta la ruta de abajo según tu NAS
       - /volume1/docker/contamiki/data:/app/data
-    # Comando: Reconstruye el frontend (bundle.js) y luego arranca el servidor cada vez que se reinicia
-    #command: sh -c "npm run build && npm start"
-#    environment:
-      # Tu API Key de Google Gemini
-      #- API_KEY=AIzaSyByt2qp5UYhL-bhf1me82AM81PEJ7MJyYE
-      # Clave secreta para las sesiones (Cámbiala por seguridad)
-      #- JWT_SECRET=nasMAJU1505
-      #- APP_URL=http://conta.mafede.i234.me
-      #- SMTP_HOST=smtp.gmail.com
-      #- SMTP_PORT=587
-      #- SMTP_SECURE=false
-      #- SMTP_USER=contamikimail@gmail.com
-      #- SMTP_PASS=sbwjfvjvekgcvbth
     secrets:
       - JWT_SECRET
       - APP_URL
