--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,7 @@ services:
 # Ajusta la ruta de abajo según tu NAS
       - /volume1/docker/contamiki/data:/app/data
     environment:
-      - API_KEY: AIzaSyAisQlWx4yBFXXY32HfWj-1qQ4qKqpXcfc
+      - API_KEY:${AIzaSyAisQlWx4yBFXXY32HfWj-1qQ4qKqpXcfc}
     secrets:
       - JWT_SECRET
       - APP_URL
