Add API_KEY to .env configuration
Added Google Gemini API key to the environment configuration.

--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 
 # --- CONFIGURACIÓN PRINCIPAL ---
 # Tu clave de Google Gemini (Obtener en aistudio.google.com)
-#API_KEY=
+API_KEY=AIzaSyAisQlWx4yBFXXY32HfWj-1qQ4qKqpXcfc
 
 # Clave secreta para firmar los tokens de sesión (Cámbiala por seguridad)
 JWT_SECRET=conMAJU1505
